terraform/rds.tf
resource "aws_db_instance" "mysql_db" {
  allocated_storage    = 20
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.micro"
  db_name              = "record_store"
  username             = var.db_username
  password             = var.db_password
  parameter_group_name = "default.mysql8.0"
  skip_final_snapshot  = true
  publicly_accessible  = false

  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name

  vpc_security_group_ids = [aws_security_group.db_sg.id]
}

output "rds_endpoint" {
  value = aws_db_instance.mysql_db.endpoint
}

output "database_name" {
  value = aws_db_instance.mysql_db.db_name
}
